@@ -65,7 +65,7 @@ bool CBeamLaser::TryTarget(const float3& pos,bool userTarget,CUnit* unit)
 	if(helper->LineFeatureCol(weaponPos,dir,length))
 		return false;
 
-	if(helper->TestCone(weaponPos,dir,length,(accuracy+sprayangle)*(1-owner->limExperience*0.7),owner->allyteam,owner))
+	if(avoidFriendly && helper->TestCone(weaponPos,dir,length,(accuracy+sprayangle)*(1-owner->limExperience*0.7),owner->allyteam,owner))
 		return false;
 	return true;
 }
