@@ -61,7 +61,7 @@ bool CEmgCannon::TryTarget(const float3& pos,bool userTarget,CUnit* unit)
 	if(helper->LineFeatureCol(weaponPos,dir,length))
 		return false;
 
-	if(helper->TestCone(weaponPos,dir,length,(accuracy+sprayangle)*(1-owner->limExperience*0.5),owner->allyteam,owner))
+	if(avoidFriendly && helper->TestCone(weaponPos,dir,length,(accuracy+sprayangle)*(1-owner->limExperience*0.5),owner->allyteam,owner))
 		return false;
 	return true;
 }
